mejoras para que el scraper acepte otras paginas y comienzo de scraping mediante hilos